// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRecordAction renders edit button with pidType authors and pidValue 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="/submissions/authors/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;

exports[`EditRecordAction renders edit button with pidType authors and pidValue for catalogers 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="/editor/record/authors/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;

exports[`EditRecordAction renders edit button with pidType conferences and pidValue 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="/editor/record/conferences/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;

exports[`EditRecordAction renders edit button with pidType institutions and pidValue 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="/editor/record/institutions/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;

exports[`EditRecordAction renders edit button with pidType jobs and pidValue 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="/submissions/jobs/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;

exports[`EditRecordAction renders edit button with pidType literature and pidValue 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="/editor/record/literature/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;

exports[`EditRecordAction renders edit button with pidType seminars and pidValue 1`] = `
<UserActionWrapper>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <LinkWithTargetBlank
      as="a"
      href="/submissions/seminars/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </LinkWithTargetBlank>
  </EventTracker>
</UserActionWrapper>
`;
